# smoked-salmon

./: README.md  pyproject.toml
src/salmon/: commands.py  errors.py  release_notification.py  run.py
src/salmon/checks/: __init__.py
src/salmon/common/: __init__.py
src/salmon/config/: __init__.py  validations.py
src/salmon/converter/: __init__.py  downconverting.py  transcoding.py
src/salmon/data/: config.default.toml  version.toml
src/salmon/images/: __init__.py
src/salmon/search/: __init__.py
src/salmon/tagger/: __init__.py  ai_review.py  metadata.py  pre_data.py  retagger.py  review.py  tagfile.py  tags.py
src/salmon/trackers/: ops.py
src/salmon/uploader/: __init__.py  dupe_checker.py  upload.py
tests/: test_cli_help.py  test_cli_startup.py  test_common_scrape_errors.py  test_tagger_ai_review.py  test_tagger_classical.py  test_tagger_metadata_source_url.py  test_tagger_review.py  test_trackers_ops.py  test_uploader_dupe_checker.py  test_uploader_runtime.py  test_uploader_upload.py
