[project]
name = "salmon"
version = "0.10.1"
description = "An uploading script for Gazelle-based music trackers."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.5 ; sys_platform == 'win32'",
    "aiohttp-jinja2>=1.5.1",
    "aiohttp[speedups]>=3.8.5 ; sys_platform != 'win32'",
    "aiolimiter>=1.2.1",
    "anyio>=4.12.1",
    "asyncclick>=8.1.7.2",
    "av>=16.1.0",
    "beautifulsoup4[lxml]>=4.13.0",
    "deluge-client>=1.10.2",
    "humanfriendly>=10.0",
    "jinja2>=3.1.2",
    "msgspec[toml]>=0.20.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "numpy>=2.4.2",
    "openai>=2.30.0",
    "pillow>=11.3.0",
    "platformdirs>=4.3.8",
    "pycambia>=0.2.0",
    "pyimgbox>=1.0.7",
    "pyoxipng>=9.1.0",
    "pyperclip>=1.8.2",
    "qbittorrent-api>=2025.2.0",
    "requests>=2.31.0",
    "send2trash>=1.8.3",
    "tenacity>=9.1.2",
    "torf>=4.3.0",
    "tqdm>=4.67.1",
    "transmission-rpc>=7.0.0",
    "unidecode>=1.3.8",
]

[project.scripts]
salmon = "salmon.run:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-type-checking
    "TC",
]

[tool.ruff.lint.per-file-ignores]
# run.py imports command modules for their side effects (registering CLI commands)
"src/salmon/run.py" = ["F401"]

[tool.pyright]
typeCheckingMode = "standard"
reportPossiblyUnboundVariable = "warning"
reportUnreachable = "warning"
reportInvalidCast = "warning"
reportUnsafeMultipleInheritance = "warning"
reportImplicitAbstractClass = "warning"
reportInvalidAbstractMethod = "warning"
reportPrivateImportUsage = "none"
